test: add tests